// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default renders div if not ready 1`] = `<div />`;

exports[`Default renders results 1`] = `
<div
  className="mock"
>
  Results
</div>
`;

exports[`Default renders survey 1`] = `
<div
  className="mock"
>
  Survey
</div>
`;
